--- a/stu_sys/templates/web.html
+++ b/stu_sys/templates/web.html
@@ -5,6 +5,11 @@
     <!-- 引入jQuery库-->  
     <link rel="stylesheet" href="https://cdn.acwing.com/static/jquery-ui-dist/jquery-ui.min.css">
     <script src="https://cdn.acwing.com/static/jquery/js/jquery-3.3.1.min.js"></script>
+    <!-- 引入datatables库 -->
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+    <script src="https://cdn.datatables.net/select/1.3.4/js/dataTables.select.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/select/1.3.4/css/select.dataTables.min.css">
     <!-- 引入自己的css和js文件-->
     <link rel="stylesheet" href="{% static 'css/stu_sys.css' %}"></link>
     <script src="{% static 'js/dist/stu_sys.js' %}"></script>
@@ -13,6 +18,25 @@
 <body style="margin: 0">
     <div id="my_design_12345678"></div>
     <script>
+        Date.prototype.format1st = function (fmt) {
+            var arr = ['星期日', '星期一', '星期二', '星期三', '星期四', '星期五', '星期六'];
+            var o = {
+                "M+": this.getMonth() + 1 + '月', //月份
+                "d+": this.getDate() + '日', //日
+                "a+": arr[this.getDay()]
+            };
+
+            if (/(y+)/.test(fmt)) {
+                fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "年").substr(4 - RegExp.$1.length));
+            }
+            for (var k in o) {
+                if (new RegExp("(" + k + ")").test(fmt)) {
+                    fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ?
+                        (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+                }
+            }
+            return fmt;
+        }
         $(document).ready(function(){
             let stu_sys = new StuSys("my_design_12345678");
         });
