--- a/stu_sys/static/css/stu_sys.css
+++ b/stu_sys/static/css/stu_sys.css
@@ -382,7 +382,7 @@
     display: block;
     text-align: left;
     color: #000;
-    font-size: 1.5vh;
+    font-size: 1.8vh;
 }
 
 .stu-sys-right-teacher-info-show {
@@ -442,4 +442,122 @@
     width: 100%;
     border: 1px solid #aaa;
     border-radius: 10px;
+}
+
+.stu-sys-right-student-info-form {
+    width: 40%;
+    height: 88%;
+    background-color: rgba(255, 255, 255, 0.5);
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2.5%;
+    border-radius: 10px;
+    box-shadow: 0 0 5px #000;
+    text-align: center;
+    font-family: "微软雅黑";
+    color: #000;
+}
+
+.stu-sys-right-student-info-show {
+    width: 40%;
+    height: 88%;
+    background-color: rgba(255, 255, 255, 0.5);
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2.5%;
+    border-radius: 10px;
+    box-shadow: 0 0 5px #000;
+    text-align: center;
+    font-family: "微软雅黑";
+    color: #000;
+}
+
+#student-info-form-show-name {
+    font-size: 3vh;
+}
+
+#student-info-form-show-sex {
+    font-size: 3vh;
+}
+
+#student-info-form-show-age {
+    font-size: 3vh;
+}
+
+#student-info-form-show-dept {
+    font-size: 3vh;
+}
+
+#student-info-form-show-minor {
+    font-size: 3vh;
+}
+
+#student-info-form-show-class {
+    font-size: 3vh;
+}
+
+.student-info-form-show-submit {
+    margin-top: 10vh;
+}
+
+.stu-sys-right-admin-student-manage {
+    width: 99%;
+    height: 98%;
+    background-color: #FFFFFF;
+    position: relative;
+    top: 1%;
+    left: 0.5%;
+}
+
+.stu-sys-right-admin-student-manage-title {
+    font-size: 4vh;
+    text-align: center;
+    position: relative;
+    top: 10%;
+}
+
+.stu-sys-right-admin-student-manage-addition {
+    font-size: 2vh;
+    font-family: fangsong;
+    font-weight: bold;
+    position: relative;
+    top: 12%
+}
+
+.stu-sys-right-admin-student-manage-search {
+    position: relative;
+    top: 20%
+}
+
+.stu-sys-right-admin-student-manage-select {
+    background-color: #7DB9DE;
+    color: white;
+    font-size: 2.5vh;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-right: 2%;
+}
+
+.stu-sys-right-admin-student-manage-select option {
+    background-color: #FFFFFF;
+    color: #7DB9DE;
+}
+
+.stu-sys-right-admin-student-manage-select-button {
+    position: relative;
+    right: -40%;
+}
+
+.stu-sys-right-admin-student-manage-table {
+    position: relative;
+    top: 30%
+}
+
+#admin-student-manage-table tr{
+    text-align: center;
 }
