--- a/stu_sys/static/css/stu_sys.css
+++ b/stu_sys/static/css/stu_sys.css
@@ -643,5 +643,53 @@
     color: #000;
 }
 
+.stu-sys-right-admin-teacher-manage {
+    width: 99%;
+    height: 98%;
+    background-color: #FFFFFF;
+    position: relative;
+    top: 1%;
+    left: 0.5%;
+}
 
+.stu-sys-right-admin-teacher-manage-title {
+    font-size: 4vh;
+    text-align: center;
+    position: relative;
+    top: 10%;
+    font-weight: bold;
+}
+
+.stu-sys-right-admin-teacher-manage-addition{
+    font-size: 2.5vh;
+    font-family: fangsong;
+    font-weight: bold;
+    position: relative;
+    top: 12%
+}
+
+.stu-sys-right-admin-teacher-manage-search{
+    position: relative;
+    top: 20%;
+}
+
+.stu-sys-right-admin-teacher-manage-table{
+    position: relative;
+    top: 30%
+}
+
+.stu-sys-right-admin-teacher-manage-select{
+    background-color: #7DB9DE;
+    color: white;
+    font-size: 2.5vh;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    margin-right: 2%;
+}
+
+.stu-sys-right-admin-teacher-manage-select option {
+    background-color: #FFFFFF;
+    color: #7DB9DE;
+}
 
